Programming languages and paradigms/Interpreter/examples/bad/func_lit_no_default.ho
func main() {
    var f func() int; // error:2:11: cannot create an uninitialised function
}